# mavic-helper

./: .gitignore  LICENSE.txt  README.md  README.rst  mkdocs.yml  pixi.toml  pyproject.toml
ci/: cli-help.ps1
docs/: cli.md  parameter-sensitivity.ipynb
docs/includes/cli/: cli.positions.txt  cli.tidytiff.txt  cli.totiff.txt
mavic_helper/cli/: adjust.py  mav.py  positions.py  remask.py  shade.py  tidytiff.py  totiff.py
scripts/: Copy-XMP.ps1  Process-Images.ps1
